# updated-open-range

./: .gitignore  CLA.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  contribution_readme.md  fix_pentest.py  pyproject.toml
.github/workflows/: ci.yml  cla.yml
docs/: manifest.md  start_here.md
docs/design/: evolving-pool-curriculum.md
examples/: codex_eval.py  cyber_realize.py  rllm_grpo_cyber.py  strands_eval.py  swe_eval.py  trl_grpo_cyber.ipynb  trl_grpo_lora.ipynb
packs/cyber_webapp/: DESIGN.md  MANIFEST.md  README.md  pyproject.toml
packs/cyber_webapp/cyber_webapp/: __init__.py  builder.py  consequence.py  container.py  difficulty.py  invariants.py  llm_generation.py  llm_realize.py  mitre_techniques.yaml  mutation.py  ontology.py  priors.py  realize.py  realize_admit.py  reference_solver.py  reseed.py  sampling.py  technique_classifier.py  verify.py
packs/cyber_webapp/cyber_webapp/codegen/: __init__.py  discovery.py  handlers.py  seeding.py
packs/cyber_webapp/cyber_webapp/codegen/templates/: app.py.j2
packs/cyber_webapp/cyber_webapp/families/: build.py  pentest.py
packs/cyber_webapp/cyber_webapp/npcs/: __init__.py  admin_audit.py  browsing_user.py  curious_employee.py  office_chatter.py  office_persona.py
packs/cyber_webapp/cyber_webapp/vulnerabilities/: __init__.py
packs/cyber_webapp/cyber_webapp/vulnerabilities/templates/: broken_authz.py.j2  command_injection.py.j2  config_disclosure.py.j2  credential_gated_flag.py.j2  credential_gated_relay.py.j2  credential_leak.py.j2  idor.py.j2  metadata_credential_leak.py.j2  path_traversal.py.j2  sql_injection.py.j2  ssrf.py.j2  ssti.py.j2  weak_credentials.py.j2  xxe.py.j2
packs/cyber_webapp/tests/: test_technique_classifier.py
packs/swe/: DESIGN.md  README.md  pyproject.toml
packs/swe/swe/: __init__.py  builder.py  grading.py  instances.py  invariants.py  ontology.py  realize.py  sandbox.py  swebench.py
packs/swe/swe/families/: __init__.py  _target.py  build.py  fix.py
packs/swe/swe/fixtures/: calc_sum.json  notes_app.json  shapes_area.json
packs/trading/: pyproject.toml
packs/trading/trading/families/: backtest.py  pnl.py
scripts/: check_boundary.sh
src/openrange/: __init__.py  agent.py  agent_backend.py  llm.py  npc.py  pool.py  runtime.py  training.py
src/openrange/core/: __init__.py  _registry.py  admit.py  curriculum.py  episode.py  errors.py  pack.py  sandbox.py  store.py
src/openrange/dashboard/: topology.py  view.py
src/openrange/dashboard/static/: dashboard.css  dashboard.js  index.html
tests/: conftest.py  test_admit.py  test_agent_backend.py  test_agent_harness.py  test_agent_sandbox.py  test_byo_tools.py  test_curriculum.py  test_cyber_auto_curriculum.py  test_cyber_chain_believability.py  test_cyber_codegen.py  test_cyber_company.py  test_cyber_container.py  test_cyber_exploit_author.py  test_cyber_lateral.py  test_cyber_llm_realize.py  test_cyber_manifest_contract.py  test_cyber_networked.py  test_cyber_networkize.py  test_cyber_npcs.py  test_cyber_pentest_feasibility.py  test_cyber_post_channel.py  test_cyber_procedural_builder.py  test_cyber_realize_admit.py  test_cyber_recon.py  test_cyber_reseed.py  test_cyber_solver.py  test_cyber_staged_generation.py  test_cyber_vulnerabilities.py  test_cyber_webapp_build.py  test_cyber_webapp_v2.py  test_dashboard_runs.py  test_import_boundaries.py  test_llm_and_dashboard.py  test_npc.py  test_office_persona.py  test_openai_compatible_backend.py  test_pool.py  test_rllm_shim.py  test_runtime.py  test_snapshot_round_trip.py  (+10 more)
