[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
license = "MIT"

[project]
name = "openrange"
version = "0.1.0"
description = "Domain-agnostic admitted world builder for agent training environments."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0.3",
    "Jinja2>=3.1",
    "graphschema",
    "openrange-pack-sdk",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=1.38.0",
    "strands-agents-tools>=0.4.1",
]
# The HuggingFace TRL GRPO integration is a *separate* optional package,
# ``packages/openrange-trl`` — OpenRange itself owns no trainer code or deps.

[project.scripts]
openrange = "openrange.__main__:main"

# Built-in packs live in their own workspace members under packs/ — they
# register themselves via openrange.packs / openrange.npcs entry points
# in their own pyproject.toml. Core has none.

[dependency-groups]
dev = [
    "coverage[toml]>=7.13",
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.15.6",
    "openrange-cyber-webapp",
    "openrange-trading",
    "openrange-swe",
    "openrange-trl",
]

[tool.uv.workspace]
members = [
    "packs/cyber_webapp",
    "packs/trading",
    "packs/swe",
    "packages/graphschema",
    "packages/openrange-pack-sdk",
    "packages/openrange-trl",
]

[tool.uv.sources]
graphschema = { workspace = true }
openrange-cyber-webapp = { workspace = true }
openrange-trading = { workspace = true }
openrange-swe = { workspace = true }
openrange-pack-sdk = { workspace = true }
openrange-trl = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/openrange"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.14"
mypy_path = [
    "src",
    "packs/cyber_webapp",
    "packs/trading",
    "packs/swe",
    "packages/graphschema/src",
    "packages/openrange-pack-sdk/src",
    "packages/openrange-trl/src",
]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# Strands is an optional dependency (``openrange[strands]``). Skip
# import resolution so the core type-checks cleanly even when it
# isn't installed.
[[tool.mypy.overrides]]
module = ["strands", "strands.*", "strands_tools", "strands_tools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Repo root on the path so tests can import the example eval scripts (the
# `examples` package) — they double as executable specs worth pinning.
pythonpath = ["."]
testpaths = [
    "tests",
    "packages/graphschema/tests",
    "packages/openrange-pack-sdk/tests",
]

[tool.coverage.run]
branch = true
source = ["openrange", "openrange_pack_sdk", "cyber_webapp", "openrange_trl"]
omit = [
    "src/openrange/__main__.py",
]

[tool.coverage.report]
# Was 100, then 85. Lowered to 80 while the pack/admission refactor
# settles — episode.py + realize.py lost the test_v1_episode.py HTTP
# round-trip coverage when the old EpisodeService shape was retired
# in Round 4. Bringing coverage back to 100 is a tracked follow-up
# (see ROADMAP.md "Restore 100% test coverage", issue #201).
fail_under = 80
show_missing = true
skip_covered = true
